# passman

./: Cargo.toml  README.md
src/: cli.rs  encryption.rs  main.rs
